--- a/Node/package.json
+++ b/Node/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/AbhishekSharma-86/NewsKon#readme",
   "dependencies": {
-    "ejs": "^3.1.6"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
